clusters/home/apps/gatus/gatus/configs/gatus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus-ingressroute
  namespace: gatus
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gatus.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: gatus
      port: 80
  tls:
    secretName: gatus-certificate-secret
